Fixed dark mode text

--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -4,7 +4,7 @@
     float: left
     margin 0.5em 1em 1em 0
     border-radius: 6px
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4)
+    box-shadow: 0 0 6px var(--card-shadow-color)
 
   .text-panel
     margin 0em 0.5em
