--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -49,7 +49,7 @@
 
 
   .expansion-panel-header
-    background-color: var(--tertiary-background);
+    background-color: var(--accent-secondary-color);
     cursor pointer
     &:hover
       background-color var(--accent-secondary-hover-color)
