--- a/src/map-interface/components/transitions/main.module.styl
+++ b/src/map-interface/components/transitions/main.module.styl
@@ -17,7 +17,7 @@ transitionable()
 .loading-area
   position: relative
   .spinner, .data
-    transition: height 0.2s ease-in, opacity 0.2s ease-in
+    transition: height 0.5s ease-in, opacity 0.2s ease-in
   .spinner
     position absolute
     top 0
@@ -25,7 +25,7 @@ transitionable()
     width: 100%
     height 100%
     min-height: 90px
-    background-color: rgba(255, 255, 255, 0.8)
+    background-color: var(--panel-background-color)
     padding: 15px
   &.enter
     .spinner
